# notion2markdown

./: Readme.md  pyproject.toml  tox.ini
notion2markdown/: constant.py  index.py  main.py  md.py  notion_reader.py  utils.py
notion2markdown/schema/: color.py  emoji.py  file.py  mention.py  parent.py  user.py
notion2markdown/schema/block/: block.py  rich_text.py  type.py
notion2markdown/schema/page/: page.py  page_propertes.py
tests/: test_md.py
tests/schema/: test_emoji.py  test_file.py  test_mention.py  test_parent.py  test_user.py
