[tool.poetry]
name = "notion-markdown"
version = "0.1.0"
description = ""
authors = ["Atsuki Shirasawa <shirasawa_atsuki@retail-ai.jp>"]
readme = "README.md"
packages = [{ include = "notion2markdown" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notion-client = "^2.2.1"
#notion2markdown = "^2.9.0"
python-dotenv = "^1.0.1"
#llama-index-readers-notion = "^0.1.6"
tablate = "^0.1.12"
pydantic = "^2.6.4"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240403"
types-tabulate = "^0.9.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.ruff]
target-version = "py311"

line-length = 79
select = [
    "E",   # pycodestype error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "C90", # mccabe
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "S",   # flake8-bandit 
    "PTH", # flake8-use-pathlib 
]
ignore = [
    "D415", # pydocstyle about First line should end with a '.' , '?' or '!'
    "E501", # line too long, handled by black
]
unfixable = [
    "F401", # disable auto-fix for unused-imports
    "F841", # disable auto-fix for unused-variable
]
[tool.ruff.per-file-ignores]
# ignore assert error only in unnit-test
"test_*.py" = ["S101"]
"*_test.py" = ["S101"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10
